--- a/app/src/main/res/layout/myview.xml
+++ b/app/src/main/res/layout/myview.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimary">
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="返回"
         android:layout_margin="5dp"
         android:background="@color/colorAccent"
-        />
+        android:text="返回" />
+
     <TextView
         android:id="@+id/textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_centerInParent="true"
-        android:text="这是标题"
-        />
+        android:text="这是标题" />
 </RelativeLayout>
